Removed unnecessary lines