@@ -1,17 +1,18 @@
 package ua.kiev.sa.utils;
 
 import java.io.File;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
-public class FileUtils {
-    public void changeFile(String path, String name, String oldString, String newString){
-        name = (path + name).replaceAll("\\.", "/");
-        String filePath = name + ".java;
-        .UTF_8;
+public class FileUtil {
 
-        String content = new String(Files.readAllBytes(path), charset);
-        content = content.replaceAll(oldString, newString);
-        Files.write(path, content.getBytes(charset));
-
+    public static void changeFile(File file, String oldString, String newString) {
+        try {
+            String content = Files.readString(file.toPath());
+            content = content.replaceAll(oldString, newString);
+            Files.write(file.toPath(), content.getBytes(StandardCharsets.UTF_8));
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 }
